Source/WebCore/editing/FrameSelection.cpp
@@ -1656,10 +1656,13 @@ void FrameSelection::updateAppearance()
 
     bool caretBrowsing = m_frame->settings() && m_frame->settings()->caretBrowsingEnabled();
     bool shouldBlink = caretIsVisible() && isCaret() && (isContentEditable() || caretBrowsing);
+    
+    EditCommand* lastEditCommand = m_frame ? m_frame->editor()->lastEditCommand() : 0;
+    bool shouldStopBlinkingDueToTypingCommand = lastEditCommand && lastEditCommand->shouldStopCaretBlinking();
 
     // If the caret moved, stop the blink timer so we can restart with a
     // black caret in the new location.
-    if (caretRectChanged || !shouldBlink)
+    if (caretRectChanged || !shouldBlink || shouldStopBlinkingDueToTypingCommand)
         m_caretBlinkTimer.stop();
 
     // Start blinking with a black caret. Be sure not to restart if we're
